refactorizaciones básica